# coding_test

./: CMakeLists.txt  main.cpp
Bronze/Bronze1/: 1526_bigsu.cpp  17247_taxi_distance.cpp  2163_chocolate.cpp  2755_average_score.cpp  4796_camping.cpp
Bronze/Bronze2/: 10996_star21.cpp  13300_room_math.cpp  1550_16.cpp  1568_bird_math.cpp  1977_perfect_squ.cpp  2355_sigma_math.cpp  2592_representative_math.cpp  2864_56diff.cpp  5355_Mars_math.cpp
Silver/Silver5/: 1789_NumTotal.cpp  9625_BABBA_DP.cpp  9656_StoneGame_DP.cpp  Divide_Word.cpp  number_game.cpp
