cmake_minimum_required(VERSION 3.25)
project(_)

set(CMAKE_CXX_STANDARD 17)

add_executable(_ main.cpp Silver/Silver5/Divide_Word.cpp Silver/Silver5/number_game.cpp Bronze/Bronze1/2163_chocolate.cpp Bronze/Bronze1/4796_camping.cpp Bronze/Bronze1/2755_average_score.cpp Bronze/Bronze1/17247_taxi_distance.cpp Silver/Silver5/1789_NumTotal.cpp Bronze/Bronze1/1526_bigsu.cpp Bronze/Bronze2/13458_director.cpp Bronze/Bronze2/1550_16.cpp Bronze/Bronze2/1977_perfect_squ.cpp Bronze/Bronze2/2864_56diff.cpp Bronze/Bronze2/10996_star21.cpp Silver/Silver5/9656_StoneGame_DP.cpp)
